# regex

./: Makefile  Makefile.am  README  TODO  configure.ac  list.c  list.h  misc.c  misc.h  nfa.c  nfa.h  nfa_sim.c  nfa_sim.h  regex_parser.c  regex_parser.h  scanner.c  scanner.h  slist.c  slist.h  stack.h  test.pl  test_input  test_input_interval  token.c
src/: backtrack_recognizer.c  backtrack_recognizer.h  bits.h  boyer_moore.c  boyer_moore.h  cgrps.h  collations.c  collations.h  compile.c  compile.h  errmsg.h  main.c  match_record.c  match_record.h  misc.c  misc.h  mpat.c  mpat.h  nfa.c  nfa.h  nfa_alloc.c  nfa_alloc.h  nfa_sim.c  nfa_sim.h  rbtree.c  rbtree.h  recognizer.c  recognizer.h  regex_parser.c  regex_parser.h  scanner.c  scanner.h  slist.c  slist.h  stack.h  token.c  token.h
tests/: result_summary  test.pl  test_plan
tests/manual_test/: test_in  test_input  test_input2  test_r.txt  test_r2.txt  test_r3.txt
tests/test_cases/: test_r2.txt
tests/test_input/: test_input
tests/test_slist/: Makefile  test_slist.c  wrapper_funcs.c  wrapper_funcs.h
